# TexturePacker

./: .gitignore  AtlasTextureView.cpp  AtlasTextureView.hpp  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.hpp  README.md  Resources.qrc  TPProject.cpp  TPProject.hpp  TexturePacker.pro  main.cpp
exporter/: CocosExporter.cpp  CocosExporter.hpp  Exporter.cpp  Exporter.hpp
packer/: BinPack.cpp  BinPack.hpp  ImagePacker.cpp  ImagePacker.hpp  MaxRects.cpp  MaxRects.hpp  Packer.hpp
utils/: Utils.cpp  Utils.hpp
views/: DataSettingView.cpp  DataSettingView.hpp  SettingLabel.cpp  SettingLabel.hpp  SettingPanel.cpp  SettingPanel.hpp  SpriteSettingView.cpp  SpriteSettingView.hpp  TextureSettingView.cpp  TextureSettingView.hpp
